# UntypedScript

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
conf/: config.json
deprecated/: assemble.ps1  lexer.py
docs/: async.md  external-names.md
docs-saved/: functions.md  lowered-code.md
docs/source/: async.md  conf.py  errors.md  external-names.md  functions.md  getstarted.md  index.rst  namespaces.md  output-fmts.md  pointers.md  scopes.md  structs.md  types-and-assignments.md  variables.md
ideas/objects/: objects.uts
ideas/stackalloc/: stackalloc.uts
lib/: extd.uts  module_import_schema.json  temp-utils.uts  uts-info.uts
lib/utils/: math.uts  obj.uts  uts-array.uts
lib/uts/: info.uts
src/: assemble.ps1  assemble.sh  ast_cleaner.py  ast_preprocessor.py  code_lowerer.py  compiler.py  errno.txt  lexer.py  optimizer.py  sequential_lexer.py  utils.py  uts_parser.py  utsc.py
src/untypedscript_utsc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/uts-lib/: module_import_schema.jsonc
src/utsc/: __init__.py  ast_preprocessor.py  compiler.py  feedconf.txt  sequential_lexer.py  utils.py  uts_parser.py  utsc-config.json
tests/: helloworld.uts
tests/argtest/: args.uts
tests/argv/: argv.asm  argv.json  argv.lst  argv.uts
tests/arrliteral/: arrliteral.uts
tests/asmtests/: pushinstr.asm
tests/callexpr/: callexpr.uts
tests/changemain/: changemain.uts
tests/compiletimefun/: largefile.uts
tests/dynamicobj/: dynamicobj.uts  lower.uts
tests/helloworld/: helloworld.uts  out.asm
(+80 files in other folders)
